@@ -1,3 +1,10 @@
+2007-03-11 Don Scorgie <Don@Scorgie.org>
+
+	* src/MainWindow.py:
+	* src/MMapArea.py:
+	* src/UndoMAnager.py:
+	Enable undo / redo of scaling and translation
+
 2007-03-10 Don Scorgie <Don@Scorgie.org>
 
 	* src/BaseThought.py:
